feat: add adaptive hero all size

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,7 +31,7 @@
         </picture>
         <div class="container hero__container">
           <h2 class="hero__title hero__title--slide1">Скидка 15% на первую покупку</h2>
-          <button class="btn-reset hero__btn">Получить!</button>
+          <button class="btn-reset hero__btn hero__btn-slide">Получить!</button>
         </div>
       </li>
       <li class="swiper-slide hero__slide">
@@ -51,7 +51,7 @@
         </picture>
         <div class="container hero__container">
           <h2 class="hero__title hero__title--slide2">1000+ аксессуаров для дома</h2>
-          <button class="btn-reset hero__btn">Подробнее</button>
+          <button class="btn-reset hero__btn hero__btn-slide">Подробнее</button>
         </div>
       </li>
       <li class="swiper-slide hero__slide">
@@ -71,10 +71,13 @@
         </picture>
         <div class="container hero__container">
           <h2 class="hero__title hero__title--slide3">Коллекция стильного и яркого текстиля</h2>
-          <button class="btn-reset hero__btn">Подробнее</button>
+          <button class="btn-reset hero__btn hero__btn-slide">Подробнее</button>
         </div>
       </li>
     </ul>
     <div class="swiper-pagination hero__pagination"></div>
+  </div>
+  <div class="container hero__btn-container">
+    <button class="btn-reset btn-all hero__btn hero__btn-mobile">Получить!</button>
   </div>
 </section>
