--- a/src/partials/searchCatalog.html
+++ b/src/partials/searchCatalog.html
@@ -3,7 +3,7 @@
   <svg class="form__search-search">
     <use xlink:href="img/sprite.svg#search"></use>
   </svg>
-  <button class="btn-reset form__search-btn" type="button">
+  <button class="btn-reset form__search-btn" type="submit">
     <svg class="form__search-btn-img">
       <use xlink:href="img/sprite.svg#arrowSearch"></use>
     </svg>
