--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -27,5 +27,6 @@
   --night-rider-color: #333333;
   --lime-color: #DAFFD1;
   --bone-color: #FFF5D1;
+  --black-color: #000000;
   --black-025-color: rgba(0, 0, 0, 0.25);
 }
