--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,12 @@
 .header {
   margin-bottom: 32px;
 
+  @include small-tablet {
+    & {
+      margin-bottom: 31px;
+    }
+  }
+
   @include mobile {
     & {
       margin-bottom: 32.5px;
