fix: refactor cpde special section desctop

--- a/src/partials/special.html
+++ b/src/partials/special.html
@@ -28,16 +28,21 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic">
-              <source srcset="img/special/special1.avif" type="image/avif">
-              <source srcset="img/special/special1.webp" type="image/webp">
-              <img loading="lazy" src="img/special/special1.png" class="special__content-image" width="193" height="210"
-                alt="Кресло велюровое “X-24”">
-            </picture>
-            <h3 class="special__content-title">Кресло велюровое <no-typography>“X-24”</no-typography></h3>
-            <div class="special__content-offer">
-              <ins class="special__content-offer-new">15 990 руб</ins>
-              <del class="special__content-offer-old">24 990 руб</del>
+            <div class="special__content-wrap-img">
+              <picture>
+                <source srcset="img/special/special1.avif" type="image/avif">
+                <source srcset="img/special/special1.webp" type="image/webp">
+                <img loading="lazy" src="img/special/special1.png" class="special__content-image" width="193"
+                  height="210" alt="Кресло велюровое “X-24”">
+              </picture>
+            </div>
+            <div class="special__content-description">
+              <h3 class="special__content-description-title">Кресло велюровое <no-typography>“X-24”</no-typography>
+              </h3>
+              <div class="special__content-offer">
+                <ins class="special__content-offer-new">15 990 руб</ins>
+                <del class="special__content-offer-old">24 990 руб</del>
+              </div>
             </div>
             <a href="#no-scrolling" class="special__content-link btn-all">Купить</a>
           </article>
@@ -52,16 +57,23 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic special__content-pic--center">
-              <source srcset="img/special/special2.avif" type="image/avif">
-              <source srcset="img/special/special2.webp" type="image/webp">
-              <img loading="lazy" src="img/special/special2.png" class="special__content-image" width="450" height="245"
-                alt="Диван тканевый “Z-44”">
-            </picture>
-            <h3 class="special__content-title">Диван тканевый <no-typography>“Z-44”</no-typography></h3>
-            <div class="special__content-offer">
-              <ins class="special__content-offer-new">22 990 руб</ins>
-              <del class="special__content-offer-old">32 990 руб</del>
+            <div class="special__content-wrap-img">
+              <picture>
+                <source srcset="img/special/special2.avif" type="image/avif">
+                <source srcset="img/special/special2.webp" type="image/webp">
+                <img loading="lazy" src="img/special/special2.png"
+                  class="special__content-image special__content-image-center" width="450" height="245"
+                  alt="Диван тканевый “Z-44”">
+              </picture>
+            </div>
+            <div class="special__content-description">
+              <h3 class="special__content-description-title">Диван тканевый <no-typography>“Z-44”</no-typography>
+              </h3>
+              </h3>
+              <div class="special__content-offer">
+                <ins class="special__content-offer-new">22 990 руб</ins>
+                <del class="special__content-offer-old">32 990 руб</del>
+              </div>
             </div>
             <a href="#no-scrolling" class="special__content-link btn-all">Купить</a>
             <div class="special__content-bgSofa">
@@ -80,16 +92,21 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic">
-              <source srcset="img/special/special3.avif" type="image/avif">
-              <source srcset="img/special/special3.webp" type="image/webp">
-              <img loading="lazy" src="img/special/special3.png" class="special__content-image" width="149" height="218"
-                alt="Будильник  “Quartz-23”">
-            </picture>
-            <h3 class="special__content-title">Будильник <no-typography>“Quartz-23”</no-typography></h3>
-            <div class="special__content-offer">
-              <ins class="special__content-offer-new">1 290 руб</ins>
-              <del class="special__content-offer-old">1 890 руб</del>
+            <div class="special__content-wrap-img">
+              <picture>
+                <source srcset="img/special/special3.avif" type="image/avif">
+                <source srcset="img/special/special3.webp" type="image/webp">
+                <img loading="lazy" src="img/special/special3.png" class="special__content-image" width="149"
+                  height="218" alt="Будильник  “Quartz-23”">
+              </picture>
+            </div>
+            <div class="special__content-description">
+              <h3 class="special__content-description-title">Будильник <no-typography>“Quartz-23”</no-typography>
+              </h3>
+              <div class="special__content-offer">
+                <ins class="special__content-offer-new">1 290 руб</ins>
+                <del class="special__content-offer-old">1 890 руб</del>
+              </div>
             </div>
             <a href="#no-scrolling" class="special__content-link btn-all">Купить</a>
           </article>
@@ -104,16 +121,21 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic">
-              <source srcset="img/special/special4.avif" type="image/avif">
-              <source srcset="img/special/special4.webp" type="image/webp">
-              <img loading="lazy" src="img/special/special4.png" class="special__content-image" width="117" height="210"
-                alt="Мини-скульптура “Oh my deer”">
-            </picture>
-            <h3 class="special__content-title">Мини-скульптура <no-typography>“Oh my deer”</no-typography></h3>
-            <div class="special__content-offer">
-              <ins class="special__content-offer-new">690 руб</ins>
-              <del class="special__content-offer-old">990 руб</del>
+            <div class="special__content-wrap-img">
+              <picture>
+                <source srcset="img/special/special4.avif" type="image/avif">
+                <source srcset="img/special/special4.webp" type="image/webp">
+                <img loading="lazy" src="img/special/special4.png" class="special__content-image" width="117"
+                  height="210" alt="Мини-скульптура “Oh my deer”">
+              </picture>
+            </div>
+            <div class="special__content-description">
+              <h3 class="special__content-description-title">Мини-скульптура <no-typography>“Oh my deer”</no-typography>
+              </h3>
+              <div class="special__content-offer">
+                <ins class="special__content-offer-new">690 руб</ins>
+                <del class="special__content-offer-old">990 руб</del>
+              </div>
             </div>
             <a href="#no-scrolling" class="special__content-link btn-all">Купить</a>
           </article>
@@ -128,16 +150,22 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic special__content-pic--center">
-              <source srcset="img/special/special5.avif" type="image/avif">
-              <source srcset="img/special/special5.webp" type="image/webp">
-              <img loading="lazy" src="img/special/special5.png" class="special__content-image" width="463" height="223"
-                alt="Диван вел-флок “Z-85”">
-            </picture>
-            <h3 class="special__content-title">Диван вел-флок <no-typography>“Z-85”</no-typography></h3>
-            <div class="special__content-offer">
-              <ins class="special__content-offer-new">22 990 руб</ins>
-              <del class="special__content-offer-old">32 990 руб</del>
+            <div class="special__content-wrap-img">
+              <picture>
+                <source srcset="img/special/special5.avif" type="image/avif">
+                <source srcset="img/special/special5.webp" type="image/webp">
+                <img loading="lazy" src="img/special/special5.png" class="special__content-image" width="463"
+                  height="223" alt="Диван вел-флок “Z-85”">
+              </picture>
+            </div>
+            <div class="special__content-description">
+              <h3 class="special__content-description-title">Диван вел-флок <no-typography>“Z-85”</no-typography>
+              </h3>
+              </h3>
+              <div class="special__content-offer">
+                <ins class="special__content-offer-new">22 990 руб</ins>
+                <del class="special__content-offer-old">32 990 руб</del>
+              </div>
             </div>
             <a href="#no-scrolling" class="special__content-link btn-all">Купить</a>
             <div class="special__content-bgSofa">
@@ -156,16 +184,21 @@
                 </svg>
               </span>
             </span>
-            <picture class="special__content-pic">
-              <source srcset="img/special/special6.avif" type="image/avif">
-              <source srcset="img/special/special6.webp" type="image/webp">
-              <img loading="lazy" src="img/special/special6.png" class="special__content-image" width="183" height="218"
-                alt="Термометр + гидрометр “H-18”">
-            </picture>
-            <h3 class="special__content-title">Термометр + гидрометр <no-typography>“H-18”</no-typography></h3>
-            <div class="special__content-offer">
-              <ins class="special__content-offer-new">1 390 руб</ins>
-              <del class="special__content-offer-old">2 090 руб</del>
+            <div class="special__content-wrap-img">
+              <picture>
+                <source srcset="img/special/special6.avif" type="image/avif">
+                <source srcset="img/special/special6.webp" type="image/webp">
+                <img loading="lazy" src="img/special/special6.png" class="special__content-image" width="183"
+                  height="218" alt="Термометр + гидрометр “H-18”">
+              </picture>
+            </div>
+            <div class="special__content-description">
+              <h3 class="special__content-description-title">Термометр + гидрометр <no-typography>“H-18”</no-typography>
+              </h3>
+              <div class="special__content-offer">
+                <ins class="special__content-offer-new">1 390 руб</ins>
+                <del class="special__content-offer-old">2 090 руб</del>
+              </div>
             </div>
             <a href="#no-scrolling" class="special__content-link btn-all">Купить</a>
           </article>
