--- a/src/scss/components/_special.scss
+++ b/src/scss/components/_special.scss
@@ -1,6 +1,6 @@
 .special {
   position: relative;
-  padding-top: 43px;
+  padding-top: 69.5px;
   padding-bottom: 35px;
 
   @include mobile {
@@ -101,50 +101,26 @@
   }
 
   &__slide {
-    position: relative;
-    width: 296px;
+    box-sizing: border-box;
+    width: calc((296 + 32) / 1280 * 100% - 32px);
     height: auto;
-    min-height: 511px;
-    border-radius: 10px;
-    background-color: var(--grey-light-color);
-    z-index: 1;
 
     &--center {
-      width: 624px;
-    }
-
-    @include big-desktop {
-      & {
-        width: calc(32.7% - 15.4px);
-      }
-    }
-
-    @include high-tablet {
-      & {
-        width: calc(50% - 16px);
-      }
-    }
-
-    @include small-tablet {
-      & {
-        width: calc(50% - 16px);
-      }
-    }
-
-    @include mobile {
-      & {
-        width: 100%;
-      }
+      width: calc((624 + 32) / 1280 * 100% - 32px);
     }
   }
 
   &__content {
     display: flex;
-    flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    min-height: 511px;
+    padding: 37px 30px 29px;
+    background-color: #f7f7f7;
+    border-radius: 10px;
     height: 100%;
-    padding: 0 30px;
 
     &-discount {
       position: absolute;
@@ -153,7 +129,7 @@
       z-index: 1;
 
       &-text {
-        padding: 6.2px 0 0 15px;
+        padding: 6.2px 0 0 19px;
         position: relative;
         top: 0;
         font-weight: 700;
@@ -164,7 +140,7 @@
 
       &-img {
         position: absolute;
-        top: 0;
+        top: -0.1px;
         left: 0;
         width: 92px;
         height: 34px;
@@ -173,51 +149,47 @@
       }
     }
 
-    &-pic {
-      display: block;
-      align-self: center;
-      margin-bottom: 17px;
-
-      &--center {
-        margin-bottom: 18px;
-        padding-left: 6px;
-
-        @include big-desktop {
-          & {
-            margin-left: -16px;
-            margin-right: -9px;
-            margin-bottom: 49px;
-            z-index: -2;
-          }
-        }
-      }
-    }
-
-    &-title {
-      margin-bottom: 20px;
-      max-width: 225px;
-      font-weight: 400;
-      font-size: 24px;
-      line-height: 130%;
-      color: var(--night-rider-color);
+    &-wrap-img {
+      position: relative;
+      width: 100%;
+      height: 245px;
+      margin-bottom: 17.5px;
     }
 
     &-image {
-      vertical-align: bottom;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      display: block;
+
+      &-center {
+        left: 50.5%;
+      }
     }
 
-    &-title {
-      font-weight: 400;
-      font-size: 24px;
-      line-height: 130%;
-      color: var(--night-rider-color);
+    &-description {
+      display: flex;
+      flex-direction: column;
+      flex: 1 1 auto;
+      margin-bottom: 24px;
+
+      &-title {
+        max-width: 222px;
+        margin-bottom: 19px;
+        flex: 1 1 auto;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 130%;
+        color: var(--night-rider-color);
+      }
     }
 
     &-offer {
       display: flex;
+      align-items: flex-end;
       column-gap: 30px;
       row-gap: 10px;
-      margin-bottom: 22px;
 
       &-new {
         display: inline-block;
@@ -238,7 +210,7 @@
     &-bgSofa {
       position: absolute;
       right: 30px;
-      bottom: 30px;
+      bottom: 27px;
 
       @include big-desktop {
         & {
@@ -248,7 +220,7 @@
     }
 
     &-link {
-      margin-bottom: 30px;
+
       transition: background-color .3s ease-in-out, color .3s ease-in-out, border-color .3s ease-in-out;
 
       @include hover {
