feat: add adaptive section special

--- a/src/partials/special.html
+++ b/src/partials/special.html
@@ -30,10 +30,9 @@
             </span>
             <div class="special__content-wrap-img">
               <picture>
-                <source srcset="img/special/special1.avif" type="image/avif">
-                <source srcset="img/special/special1.webp" type="image/webp">
-                <img loading="lazy" src="img/special/special1.png" class="special__content-image" width="193"
-                  height="210" alt="Кресло велюровое “X-24”">
+                <source srcset="img/special/special1@x1.avif, img/special/special1@x2.avif 2x, img/special/special1@x3.avif 3x" type="image/avif">
+                <source srcset="img/special/special1@x1.webp, img/special/special1@x2.webp 2x, img/special/special1@x3.webp 3x" type="image/webp">
+                <img loading="lazy" src="img/special/special1@x1.png" srcset="img/special/special1@x2.png 2x, img/special/special1@x3.png 3x" class="special__content-image" width="193" height="210" alt="Кресло велюровое “X-24”">
               </picture>
             </div>
             <div class="special__content-description">
@@ -57,12 +56,12 @@
                 </svg>
               </span>
             </span>
-            <div class="special__content-wrap-img">
+            <div class="special__content-wrap-img special__content-wrap-img--center">
               <picture>
-                <source srcset="img/special/special2.avif" type="image/avif">
-                <source srcset="img/special/special2.webp" type="image/webp">
-                <img loading="lazy" src="img/special/special2.png"
-                  class="special__content-image special__content-image-center" width="450" height="245"
+                <source srcset="img/special/special2.avif, img/special/1920special2@x2.avif 2x, img/special/1920special2@x3.avif 3x" type="image/avif">
+                <source srcset="img/special/special2.webp, img/special/1920special2@x2.webp 2x, img/special/1920special2@x3.webp 3x" type="image/webp">
+                <img loading="lazy" src="img/special/1920special2@x1.png" srcset="img/special/1920special2@x2.png 2x, img/special/1920special2@x3.png 3x"
+                  class="special__content-image special__content-image--center" width="450" height="245"
                   alt="Диван тканевый “Z-44”">
               </picture>
             </div>
@@ -94,9 +93,9 @@
             </span>
             <div class="special__content-wrap-img">
               <picture>
-                <source srcset="img/special/special3.avif" type="image/avif">
-                <source srcset="img/special/special3.webp" type="image/webp">
-                <img loading="lazy" src="img/special/special3.png" class="special__content-image" width="149"
+                <source srcset="img/special/special3@x1.avif, img/special/special3@x2.avif 2x, img/special/special3@x3.avif 3x" type="image/avif">
+                <source srcset="img/special/special3@x1.webp, img/special/special3@x2.webp 2x, img/special/special3@x3.webp 3x" type="image/webp">
+                <img loading="lazy" src="img/special/special3@x1.png" srcset="img/special/special3@x2.png 2x, img/special/special3@x3.png 3x" class="special__content-image" width="149"
                   height="218" alt="Будильник  “Quartz-23”">
               </picture>
             </div>
@@ -150,11 +149,11 @@
                 </svg>
               </span>
             </span>
-            <div class="special__content-wrap-img">
+            <div class="special__content-wrap-img special__content-wrap-img--center">
               <picture>
                 <source srcset="img/special/special5.avif" type="image/avif">
                 <source srcset="img/special/special5.webp" type="image/webp">
-                <img loading="lazy" src="img/special/special5.png" class="special__content-image" width="463"
+                <img loading="lazy" src="img/special/special5.png" class="special__content-image special__content-image--center" width="463"
                   height="223" alt="Диван вел-флок “Z-85”">
               </picture>
             </div>
