--- a/src/scss/components/_map.scss
+++ b/src/scss/components/_map.scss
@@ -26,32 +26,52 @@
         height: 12px;
         background: 0 0;
         opacity: 1;
-      }
 
-      .ymaps-2-1-79-map .ymaps-2-1-79-balloon__close .ymaps-2-1-79-balloon__close-button::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 5px;
-        width: 6px;
-        height: 6px;
-        border-bottom: 2px solid var(--grey-color);
-        border-right: 2px solid var(--grey-color);
-        transform: rotate(135deg);
-        transition: .3s ease-in-out;
-      }
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 5px;
+          width: 6px;
+          height: 6px;
+          border-bottom: 2px solid var(--grey-color);
+          border-right: 2px solid var(--grey-color);
+          transform: rotate(135deg);
+          transition: border-color .3s ease-in-out;
+        }
 
-      .ymaps-2-1-79-map .ymaps-2-1-79-balloon__close .ymaps-2-1-79-balloon__close-button::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 8px;
-        width: 6px;
-        height: 6px;
-        border-top: 2px solid var(--grey-color);
-        border-left: 2px solid var(--grey-color);
-        transform: rotate(135deg);
-        transition: .2s ease-in-out;
+        &::after {
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 8px;
+          width: 6px;
+          height: 6px;
+          border-top: 2px solid var(--grey-color);
+          border-left: 2px solid var(--grey-color);
+          transform: rotate(135deg);
+          transition: border-color .3s ease-in-out;
+        }
+
+        @include hover {
+          +&::before {
+            border-color: var(--primary-color);
+          }
+
+          +&::after {
+            border-color: var(--primary-color);
+          }
+        }
+
+        &:active {
+          &::before {
+            border-color: var(--primary-shade-color);
+          }
+
+          &::after {
+            border-color: var(--primary-shade-color);
+          }
+        }
       }
 
       .ymaps-2-1-79-balloon__layout {
@@ -62,11 +82,11 @@
         box-shadow: 0 0 30px rgba(0, 0, 0, .25);
         border-radius: 10px;
         margin: 0;
-        left: -147px !important;
+        // left: -147px !important;
 
         @include mobile {
           & {
-            left: 0 !important;
+            // left: 0 !important;
             width: 232px;
           }
         }
@@ -91,17 +111,23 @@
 
       .ymaps-2-1-79-balloon_to_top .ymaps-2-1-79-balloon__tail {
         top: -2px;
-        left: 45%;
+        left: 20%;
         transform: rotate(-45deg) translateX(-50%);
-      }
 
-      .ymaps-2-1-79-balloon-overlay {
         @include mobile {
           & {
-            left: 192px !important;
+            left: 30%;
           }
         }
       }
+
+      // .ymaps-2-1-79-balloon-overlay {
+      //   @include mobile {
+      //     & {
+      //       left: 192px !important;
+      //     }
+      //   }
+      // }
 
       .balloon {
         display: flex;
@@ -167,9 +193,29 @@
             font-size: 14px;
             line-height: 100%;
             color: var(--secondary-color);
+            transition: color .3s ease-in-out;
 
             &-svg {
               fill: var(--secondary-color);
+              transition: fill .3s ease-in-out;
+            }
+
+            @include hover {
+              +& {
+                color: var(--secondary-light-color);
+              }
+
+              +& .balloon__top-link-svg {
+                fill: var(--secondary-light-color);
+              }
+            }
+
+            &:active {
+              color: var(--secondary-shade-color);
+
+              & .balloon__top-link-svg {
+                fill: var(--secondary-shade-color);
+              }
             }
 
             @include mobile {
