--- a/src/scss/components/_catalogDiscount.scss
+++ b/src/scss/components/_catalogDiscount.scss
@@ -2,6 +2,9 @@
 
   &__discount {
     margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
     &-form {
 
