feat: add tag catalog in section catalog

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -11,6 +11,7 @@
       </div>
       <div class="catalog__right">
         <h2 class="catalog__right-title">Каталог</h2>
+        @include('catalogTag.html')
         <div class="catalog__swiper swiper">
           @include('catalogCard.html')
         </div>
