--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -102,6 +102,7 @@
     grid-column: 4/13;
 
     &-title {
+      display: inline-block;
       margin-bottom: 24px;
       font-weight: 400;
       font-size: 24px;
