--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,5 +43,6 @@
 @import "./components/catalogDiscount";
 @import "./components/catalogColors";
 @import "./components/catalogOksford";
+@import "./components/catalogTag";
 @import "./components/catalogSwiper";
 
