--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -103,6 +103,7 @@
 
     &-title {
       display: inline-block;
+      margin-right: 16px;
       margin-bottom: 24px;
       font-weight: 400;
       font-size: 24px;
