feat: add dropfilter category in section catalog

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -12,6 +12,7 @@
       <div class="catalog__right">
         <h2 class="catalog__right-title">Каталог</h2>
         @include('catalogTag.html')
+        @include('catalogDropfilter.html')
         <div class="catalog__swiper swiper">
           @include('catalogCard.html')
         </div>
