--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,4 +45,6 @@
 @import "./components/catalogOksford";
 @import "./components/catalogTag";
 @import "./components/catalogSwiper";
+@import "./components/catalogDropfilter";
+@import "./components/catalogDropfilterCategory";
 
