feat: add dropfilter price in section catalog

--- a/src/partials/catalogDropfilter.html
+++ b/src/partials/catalogDropfilter.html
@@ -3,4 +3,5 @@
     <h3 class="dropfilter__heading">Фильтры:</h3>
   </li>
   @include('catalogDropfilterCategory.html')
+  @include('catalogDropfilterPrice.html')
 </ul>
