--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,4 +47,5 @@
 @import "./components/catalogSwiper";
 @import "./components/catalogDropfilter";
 @import "./components/catalogDropfilterCategory";
+@import "./components/catalogDropfilterPrice";
 
