feat: add dropfilter color in section catalog

--- a/src/partials/catalogDropfilter.html
+++ b/src/partials/catalogDropfilter.html
@@ -4,4 +4,6 @@
   </li>
   @include('catalogDropfilterCategory.html')
   @include('catalogDropfilterPrice.html')
+  @include('catalogDropfilterDiscount.html')
+  @include('catalogDropfilterColor.html')
 </ul>
