--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,4 +48,5 @@
 @import "./components/catalogDropfilter";
 @import "./components/catalogDropfilterCategory";
 @import "./components/catalogDropfilterPrice";
+@import "./components/catalogDropfilterDiscount";
 
