feat: add dropfilter color in section catalog

--- a/src/partials/catalogDropfilterColor.html
+++ b/src/partials/catalogDropfilterColor.html
@@ -1,1 +1,77 @@
-
+<li class="dropfilter__item">
+  <button class="btn-reset dropfilter__btn" data-path="filter3" aria-label="нажмите чтобы открыть список цветов">
+    <span class="dropfilter__title">Цвет</span>
+  </button>
+  <div class="dropfilter__content" data-target="filter3">
+    <form class="catalog__form" action="#">
+      <label class="catalog__colors-form-label color" for="brownAdaptiv">
+        <input class="catalog__colors-form-input color__brown" type="checkbox" id="brownAdaptiv" name="коричневый"
+          aria-label="коричневый"><span class="catalog__colors-form-input-span">Коричневый</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="blackAdaptiv">
+        <input class="catalog__colors-form-input color__black" type="checkbox" id="blackAdaptiv" name="черный"
+          aria-label="чёрный"><span class="catalog__colors-form-input-span">Черный</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="beigeAdaptiv">
+        <input class="catalog__colors-form-input color__beige" type="checkbox" id="beigeAdaptiv" name="бежевый"
+          aria-label="бежевый"><span class="catalog__colors-form-input-span">Бежевый</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="grayAdaptiv">
+        <input class="catalog__colors-form-input color__gray" type="checkbox" id="grayAdaptiv" name="серый"
+          aria-label="серый"><span class="catalog__colors-form-input-span">Серый</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="whiteAdaptiv">
+        <input class="catalog__colors-form-input color__white" type="checkbox" id="whiteAdaptiv" name="белый"
+          aria-label="белый"><span class="catalog__colors-form-input-span">Белый</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="navyAdaptiv">
+        <input class="catalog__colors-form-input color__navy" type="checkbox" id="navyAdaptiv" name="синий"
+          aria-label="синий"><span class="catalog__colors-form-input-span">Синий</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="orangeAdaptiv">
+        <input class="catalog__colors-form-input color__orange" type="checkbox" id="orangeAdaptiv" name="оранжевый"
+          aria-label="оранжевый" checked><span class="catalog__colors-form-input-span">Оранжевый</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="yellowAdaptiv">
+        <input class="catalog__colors-form-input color__yellow" type="checkbox" id="yellowAdaptiv" name="желтый"
+          aria-label="жёлтый"><span class="catalog__colors-form-input-span">Желтый</span>
+      </label>
+      <label class="catalog__colors-form-label color" for="greenAdaptiv">
+        <input class="catalog__colors-form-input color__green" type="checkbox" id="greenAdaptiv" name="зеленый"
+          aria-label="зелёный"><span class="catalog__colors-form-input-span">Зеленый</span>
+      </label>
+      <label class="catalog__colors-form-label color color-hidden" for="redAdaptiv">
+        <input class="catalog__colors-form-input color__red" type="checkbox" id="redAdaptiv" name="красный"
+          aria-label="красный"><span class="catalog__colors-form-input-span">Красный</span>
+      </label>
+      <label class="catalog__colors-form-label color color-hidden" for="purpleAdaptiv">
+        <input class="catalog__colors-form-input color__purple" type="checkbox" id="purpleAdaptiv" name="фиолетовый"
+          aria-label="фиолетовый"><span class="catalog__colors-form-input-span">Фиолетовый</span>
+      </label>
+      <label class="catalog__colors-form-label color color-hidden" for="pinkAdaptiv">
+        <input class="catalog__colors-form-input color__pink" type="checkbox" id="pinkAdaptiv" name="розовый"
+          aria-label="розовый"><span class="catalog__colors-form-input-span">Розовый</span>
+      </label>
+      <label class="catalog__colors-form-label color color-hidden" for="blueAdaptiv">
+        <input class="catalog__colors-form-input color__blue" type="checkbox" id="blueAdaptiv" name="голубой"
+          aria-label="голубой"><span class="catalog__colors-form-input-span">Голубой</span>
+      </label>
+      <label class="catalog__colors-form-label color color-hidden" for="lightGreenAdaptiv">
+        <input class="catalog__colors-form-input color__lightgreen" type="checkbox" id="lightGreenAdaptiv" name="салатовый"
+          aria-label="салатовый"><span class="catalog__colors-form-input-span">Салатовый</span>
+      </label>
+      <label class="catalog__colors-form-label color color-hidden" for="aquamarineAdaptiv">
+        <input class="catalog__colors-form-input color__aquamarine" type="checkbox" id="aquamarineAdaptiv" name="аквамарин"
+          aria-label="аквамарин"><span class="catalog__colors-form-input-span">Аквамарин</span>
+      </label>
+      <label class="catalog__colors-form-label color color-hidden" for="grayCAdaptiv">
+        <input class="catalog__colors-form-input color__grayc" type="checkbox" id="grayCAdaptiv" name="сизый"
+          aria-label="сизый"><span class="catalog__colors-form-input-span">Сизый</span>
+      </label>
+    </form>
+    <button class="btn-reset catalog__btn color-btn" aria-label="нажмите чтобы посмотреть дополнительные цвета">+ ещё
+      7</button>
+    <button class="btn-reset catalog__btn color-close-btn"
+      aria-label="нажмите чтобы свернуть дополнительные цвета">Свернуть</button>
+  </div>
+</li>
