--- a/src/partials/catalogDropfilterDiscount.html
+++ b/src/partials/catalogDropfilterDiscount.html
@@ -1,5 +1,5 @@
 <li class="dropfilter__item">
-  <button class="dropfilter__btn" data-path="filter2">
+  <button class="btn-reset dropfilter__btn" data-path="filter2">
     <span class="dropfilter__title">Скидка</span>
   </button>
   <div class="dropfilter__content" data-target="filter2">
