feat: add perfect pixel 1920 in page catalog

--- a/src/partials/catalogCard.html
+++ b/src/partials/catalogCard.html
@@ -164,7 +164,7 @@
         <source srcset="img/card/sofa9.webp" type="image/webp">
         <img loading="lazy" src="img/card/sofa9.png" class="card__picture-image" width="262" height="125" alt="Диван из кожзама “F-85”">
       </picture>
-      <h3 class="card__title">Диван из кожзама
+      <h3 class="card__title"><no-typography>Диван из кожзама</no-typography>
         <span class="card__title-model"><no-typography>“F-85”</no-typography></span></h3>
       <span class="card__price">26 990 руб</span>
       <a href="#no-scrolling" class="card__link btn-all">Купить</a>
