--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -121,8 +121,9 @@
 
     &-title {
       display: inline-block;
-      margin-right: 16px;
-      margin-bottom: 24px;
+      margin-right: 14px;
+      margin-bottom: 23px;
+      padding-top: 1px;
       font-weight: 400;
       font-size: 24px;
       line-height: 130%;
