--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -128,6 +128,12 @@
       font-size: 24px;
       line-height: 130%;
       color: var(--night-rider-color);
+
+      @include tablet {
+        & {
+          margin-bottom: 16px;
+        }
+      }
     }
   }
 }
