feat: add addaptive and perfect pixel 768 in page catalog

--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -134,6 +134,12 @@
           margin-bottom: 16px;
         }
       }
+
+      @include small-tablet {
+        & {
+          margin-bottom: 26px;
+        }
+      }
     }
   }
 }
