--- a/src/scss/components/_catalogTag.scss
+++ b/src/scss/components/_catalogTag.scss
@@ -15,6 +15,12 @@
     padding: 2px 3.5px 3px 8.5px;
     margin-bottom: 10px;
 
+    @include small-tablet {
+      & {
+        padding-top: 3px;
+      }
+    }
+
     &-text {
       font-weight: 400;
       font-size: 14px;
